# homerun2-led-catcher

./: .gitignore  .releaserc  CLAUDE.md  Dockerfile  README.md  Taskfile.yaml  catalog-info.yaml  dagger.json  mkdocs.yml  pyproject.toml
.github/workflows/: build-test.yaml  pages.yaml  release.yaml
dagger/: main.go
docs/: architecture.md  deployment.md  development.md  hardware-setup.md  index.md  profile-reference.md
kcl/: configmap.k  deploy.k  httproute.k  kcl.mod  labels.k  main.k  namespace.k  profile_configmap.k  schema.k  secret.k  service.k  serviceaccount.k
src/led_catcher/: __init__.py  __main__.py
src/led_catcher/config/: __init__.py  settings.py
src/led_catcher/consumer/: __init__.py  redis_consumer.py
src/led_catcher/display/: __init__.py  matrix.py  modes.py
src/led_catcher/handlers/: __init__.py  health.py  led_handler.py  log_handler.py
src/led_catcher/models/: __init__.py  message.py
src/led_catcher/profile/: __init__.py  engine.py
src/led_catcher/web/: __init__.py  app.py  events.py  handler.py
src/led_catcher/web/templates/: index.html
tests/: kcl-deploy-profile.yaml  kcl-movie-scripts-profile.yaml  profile.yaml  test_config.py  test_display.py  test_health.py  test_log_handler.py  test_message.py  test_profile.py  test_web.py
