[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homerun2-led-catcher"
version = "0.1.0"
description = "RGB LED matrix catcher for homerun2 — consumes Redis Streams messages and displays on LED matrix hardware with embedded HTMX simulator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "stuttgart-things" },
]
keywords = ["homerun2", "led-matrix", "redis-streams", "htmx", "raspberry-pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "redis>=5.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pillow>=11.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.28",
]
led = [
    "numpy>=2.1",
]

[project.scripts]
led-catcher = "led_catcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
led_catcher = ["web/templates/*.html", "web/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
